istio/cdn-v2/manifests/service-user-vs.yaml
#ai generated
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: service-user
  namespace: cdn-v2-poc
spec:
  hosts:
  - api.poc.local

  gateways:
  - cdn-poc/cdn-poc-gateway

  http:
  - match:
        - uri:
            prefix: /api/user
    route:
    - destination:
        host: user
        port:
          number: 80
